[gd_scene load_steps=4 format=3 uid="uid://miu18qm6af1r"]

[ext_resource type="Script" uid="uid://d2oubjo1l5c44" path="res://Scripts/search_container.gd" id="1_dfjif"]
[ext_resource type="Theme" uid="uid://bhkvjdraqkwk6" path="res://text_button_theme.tres" id="1_huln4"]
[ext_resource type="Texture2D" uid="uid://cxhwf5djouvu5" path="res://Textures/Search128.png" id="3_huln4"]

[node name="SearchContainer" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_huln4")
script = ExtResource("1_dfjif")

[node name="SearchIcon" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_huln4")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter a search term..."

[node name="ClearButtonMargin" type="MarginContainer" parent="LineEdit"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 24

[node name="ClearButton" type="Button" parent="LineEdit/ClearButtonMargin"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
theme_override_colors/font_pressed_color = Color(1, 0.96862745, 0.972549, 1)
theme_override_colors/font_hover_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
theme_override_font_sizes/font_size = 96
text = "X"

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="LineEdit/ClearButtonMargin/ClearButton" to="." method="_on_clear_button_pressed"]
